<resources>
    <!-- Film Activity -->
    <string name="app_name">Film Fridge</string>
    <string name="api_error">Cannot connect to TMDb</string>
    <string name="empty_list">List is empty</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="now_playing_films">Now Playing</string>
    <string name="my_list">My List</string>
    <string name="settings">Settings</string>
    <string name="recommended">Recommended!</string>
    <string name="see_at_home">See at home!</string>
    <string name="not_recommended">Not recommended</string>
    <string name="filter_genres">Filter</string>
    <string name="hide_genres_dialog">Select genres to hide</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="MY_LIST_IDS">edu.uw.tacoma.tcss422.filmfridge.MY_LIST_IDS</string>

    <!--activity_login-->
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_text">LogIn</string>
    <string name="register_text">Register</string>
    <string name="filmfridge_string">Film Fridge</string>
    <string name="salmon_string">Team 4: Samon Applications</string>

    <!--register fragment-->
    <string name="confirm_email_hint">Confirm Email</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="letsregister_string">Lets get you registered!</string>

    <!--SignIn Activity-->
    <string name="LOGIN_PREFS">edu.tacoma.uw.webserviceslab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>

    <!-- Film Details Fragment -->
    <string name="label_description">Description:</string>
    <string name="label_cast">Cast:</string>
    <string name="label_release_date">Release Date: </string>
    <string name="label_content_rating">Content Rating: </string>
    <string name="label_genres">Genre(s):</string>
    <string name="label_critic_review">Critic Rating: </string>
    <string name="share">Share</string>
    <string name="poster_description">Movie Poster</string>
    <string name="share_chooser">Share the movie with a friend!</string>
    <string name="share_subject">FilmFridge Recommends</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="hide">Hide Forever</string>
    <string name="remove_from_my_list">Remove from My List</string>
    <string name="add_to_my_list_successful"> added to My List</string>
    <string name="remove_from_my_list_successful"> removed from My List</string>
    <string name="hide_forever_successful"> is now hidden</string>
    <string name="reveal">Reveal Critic Rating</string>
    <string name="unhide">Show all hidden films</string>
    <string name="unhide_successful">All films are shown</string>
    <string name="critic_rating">%d%%</string>

    <!--Settings Fragment-->
    <string name="userthreshold_string">My thresholds: </string>
    <string name="athome_string">"See At Home" Recommendation min:</string>
    <string name="intheaters_string">"In Theaters" Recommendation min:</string>
    <string name="useremail_title">My Email: </string>
    <string name="change_threshold">Change threshold...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
