<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.tacoma.uw.sjfoh.webserviceslab.FilmActivity">

    <item
        android:id="@+id/action_share"
        android:visible="false"
        android:orderInCategory="50"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_reveal"
        android:visible="false"
        android:orderInCategory="60"
        android:title="@string/reveal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never"/>

</menu>